creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/WarrantyDataSection__c.object-meta.xml
<CustomObject>
    <label>Seção Dados de Garantia</label>
    <nameField>
        <label>Seção Dados de Garantia Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seção Dados de Garantia</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>