creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/BrandObservation__c.field-meta.xml
<CustomField>
    <fullName>BrandObservation__c</fullName>
    <label>Observação da marca</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>