creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/BrandReason__c.field-meta.xml
<CustomField>
    <fullName>BrandReason__c</fullName>
    <label>Motivo da marca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>