creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/BrandSubReason__c.field-meta.xml
<CustomField>
    <fullName>BrandSubReason__c</fullName>
    <label>Sub-motivo da marca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>