creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ChassiObservation__c.field-meta.xml
<CustomField>
    <fullName>ChassiObservation__c</fullName>
    <label>Observação do chassi</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>