creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ChassiReason__c.field-meta.xml
<CustomField>
    <fullName>ChassiReason__c</fullName>
    <label>Motivo do chassi</label>
    <length>100</length>
    <type>Text</type>
</CustomField>