creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ChassiRejectReason__c.field-meta.xml
<CustomField>
    <fullName>ChassiRejectReason__c</fullName>
    <label>Motivo Rejeição Chassi</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chassi remarcado</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>