creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ChassiSubReason__c.field-meta.xml
<CustomField>
    <fullName>ChassiSubReason__c</fullName>
    <label>Sub-motivo do chassi</label>
    <length>100</length>
    <type>Text</type>
</CustomField>