creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ColorObservation__c.field-meta.xml
<CustomField>
    <fullName>ColorObservation__c</fullName>
    <label>Observação da cor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>