creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ColorReason__c.field-meta.xml
<CustomField>
    <fullName>ColorReason__c</fullName>
    <label>Motivo da cor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>