creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ColorSubReason__c.field-meta.xml
<CustomField>
    <fullName>ColorSubReason__c</fullName>
    <label>Sub-motivo da cor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>