creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/FIPEtableCodeObservation__c.field-meta.xml
<CustomField>
    <fullName>FIPEtableCodeObservation__c</fullName>
    <label>Observação do código da tabela FIPE</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>