creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/FIPEtableCodeReason__c.field-meta.xml
<CustomField>
    <fullName>FIPEtableCodeReason__c</fullName>
    <label>Motivo do código da tabela FIPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>