creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/FIPEtableCodeStatus__c.field-meta.xml
<CustomField>
    <fullName>FIPEtableCodeStatus__c</fullName>
    <label>Status do código da tabela FIPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Pendenciado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>