creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/FIPEtableCodeSubReason__c.field-meta.xml
<CustomField>
    <fullName>FIPEtableCodeSubReason__c</fullName>
    <label>Sub-motivo do código da tabela FIPE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>