creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/LicensingStateObservation__c.field-meta.xml
<CustomField>
    <fullName>LicensingStateObservation__c</fullName>
    <label>Observação da UF de licenciamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>