creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/LicensingStateReason__c.field-meta.xml
<CustomField>
    <fullName>LicensingStateReason__c</fullName>
    <label>Motivo da UF de licenciamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>