creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/LicensingStateRejectReason__c.field-meta.xml
<CustomField>
    <fullName>LicensingStateRejectReason__c</fullName>
    <label>Motivo Rejeição UF de Licenciamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UF diferente da UF de residência</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>