creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/LicensingStateSubReason__c.field-meta.xml
<CustomField>
    <fullName>LicensingStateSubReason__c</fullName>
    <label>Sub-motivo da UF de licenciamento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>