creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ManufacturingYearReason__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingYearReason__c</fullName>
    <label>Motivo do ano de fabricação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>