creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ManufacturingYearSubReason__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingYearSubReason__c</fullName>
    <label>Sub-motivo do ano de fabricação</label>
    <length>100</length>
    <type>Text</type>
</CustomField>