creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelObservation__c.field-meta.xml
<CustomField>
    <fullName>ModelObservation__c</fullName>
    <label>Observação do modelo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>