creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelReason__c.field-meta.xml
<CustomField>
    <fullName>ModelReason__c</fullName>
    <label>Motivo do modelo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>