creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelRejectReason__c.field-meta.xml
<CustomField>
    <fullName>ModelRejectReason__c</fullName>
    <label>Motivo Rejeição Modelo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modelo divergente do documento</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>