creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelSubReason__c.field-meta.xml
<CustomField>
    <fullName>ModelSubReason__c</fullName>
    <label>Sub-motivo do modelo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>