creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelYearObservation__c.field-meta.xml
<CustomField>
    <fullName>ModelYearObservation__c</fullName>
    <label>Observação do ano do modelo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>