creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelYearReason__c.field-meta.xml
<CustomField>
    <fullName>ModelYearReason__c</fullName>
    <label>Motivo do ano do modelo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>