creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelYearRejectReason__c.field-meta.xml
<CustomField>
    <fullName>ModelYearRejectReason__c</fullName>
    <label>Motivo Rejeição Ano do Modelo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ano divergente do DUT</fullName>
            </value>
            <value>
                <fullName>Dado divergente nas bases consultadas</fullName>
            </value>
            <value>
                <fullName>Ano modelo fora da política</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>