creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/ModelYearSubReason__c.field-meta.xml
<CustomField>
    <fullName>ModelYearSubReason__c</fullName>
    <label>Sub-motivo do ano do modelo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>