creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/PlateObservation__c.field-meta.xml
<CustomField>
    <fullName>PlateObservation__c</fullName>
    <label>Observação da placa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>