creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/PlateReason__c.field-meta.xml
<CustomField>
    <fullName>PlateReason__c</fullName>
    <label>Motivo da placa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>