creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/PlateRejectReason__c.field-meta.xml
<CustomField>
    <fullName>PlateRejectReason__c</fullName>
    <label>Motivo Rejeição Placa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Veículo Zero KM</fullName>
            </value>
            <value>
                <fullName>Veículo com restrição judicial</fullName>
            </value>
            <value>
                <fullName>Veículo de leilão (nível 3 ou maior)</fullName>
            </value>
            <value>
                <fullName>Veículo PCD (Consta a restrição no Detran)</fullName>
            </value>
            <value>
                <fullName>Veículo blindado maior que 4 anos</fullName>
            </value>
            <value>
                <fullName>Veículo bloqueado</fullName>
            </value>
            <value>
                <fullName>Cliente é proprietário do veículo</fullName>
            </value>
            <value>
                <fullName>Veículo de Auto escola</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>