creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/PlateSubReason__c.field-meta.xml
<CustomField>
    <fullName>PlateSubReason__c</fullName>
    <label>Sub-motivo da placa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>