creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/RenavamObservation__c.field-meta.xml
<CustomField>
    <fullName>RenavamObservation__c</fullName>
    <label>Observação do Renavam</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>