creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/RenavamPendingReason__c.field-meta.xml
<CustomField>
    <fullName>RenavamPendingReason__c</fullName>
    <label>Motivo Pendência Renavam</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Documento ilegível</fullName>
            </value>
            <value>
                <fullName>Veículo possui comunicação de venda para terceiros</fullName>
            </value>
            <value>
                <fullName>Intenção de gravame</fullName>
            </value>
            <value>
                <fullName>Débitos vencidos</fullName>
            </value>
            <value>
                <fullName>Documento não é do veículo da proposta</fullName>
            </value>
            <value>
                <fullName>Documento não anexado</fullName>
            </value>
            <value>
                <fullName>Documento incompleto</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>