creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/RenavamReason__c.field-meta.xml
<CustomField>
    <fullName>RenavamReason__c</fullName>
    <label>Motivo do Renavam</label>
    <length>100</length>
    <type>Text</type>
</CustomField>