creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/RenavamSubReason__c.field-meta.xml
<CustomField>
    <fullName>RenavamSubReason__c</fullName>
    <label>Sub-motivo do Renavam</label>
    <length>100</length>
    <type>Text</type>
</CustomField>