creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/UFplateObservation__c.field-meta.xml
<CustomField>
    <fullName>UFplateObservation__c</fullName>
    <label>Observação da UF da placa</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>