creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/UFplateReason__c.field-meta.xml
<CustomField>
    <fullName>UFplateReason__c</fullName>
    <label>Motivo da UF da placa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>