creditas-sf/force-app/main/default/objects/WarrantyDataSection__c/fields/UFplateSubReason__c.field-meta.xml
<CustomField>
    <fullName>UFplateSubReason__c</fullName>
    <label>Sub-motivo da UF da placa</label>
    <length>100</length>
    <type>Text</type>
</CustomField>